# itti-challenge

./: .gitignore  README.md  evaluation_report_20250706_154144.json  nx.json  package-lock.json  package.json
apps/itti-backend/: .env.example  .gitignore  README.md  evaluation_report_20250706_120640.json  project.json  pyproject.toml  run_evaluation.py  test_app.py  test_request.json  test_single.py
apps/itti-backend/itti_backend/: __init__.py  main.py
apps/itti-backend/itti_backend/agents/: base_agent.py  flight_change_agent.py  flight_status_agent.py  tools.py
apps/itti-backend/itti_backend/api/: chatbot_routes.py
apps/itti-backend/itti_backend/core/: config.py
apps/itti-backend/itti_backend/data/: evaluation_dataset.csv
apps/itti-backend/itti_backend/models/: __init__.py  fintech_models.py
apps/itti-backend/itti_backend/nlu/: intent_classifier.py
apps/itti-backend/itti_backend/orchestrator/: chatbot_graph.py
apps/itti-backend/itti_backend/prompts/: system_prompt.xml
apps/itti-backend/itti_backend/services/: __init__.py  chatbot_service.py  comprehensive_evaluator.py  enum_mapper.py  evaluator.py  llm_service.py  prompt_service.py
apps/sample-chat-app/: index.html  project.json  vite.config.ts
apps/sample-chat-app-e2e/: playwright.config.ts  project.json
apps/sample-chat-app/src/app/: app.spec.tsx  app.tsx  chat.module.css  chat.tsx
notebooks/data-analysis/: README.md  challenge-genai-20250610.ipynb  defensa-arquitectura-cognitiva.ipynb  defensa_prompt_engineering.ipynb  project.json  pyproject.toml
