[project]
name = "data-analysis"
version = "1.0.0"
description = "Jupyter notebooks for data analysis and experimentation"
requires-python = ">=3.9,<4"
readme = 'README.md'
dependencies = [
  "jupyter>=1.0.0",
  "jupyterlab>=4.0.0",
  "notebook>=7.0.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "plotly>=5.15.0",
  "scikit-learn>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["data_analysis"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
  "autopep8>=2.3.1",
  "ruff>=0.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "dist",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = []

fixable = ["ALL"]
unfixable = []
